🐛 last bit of bug squashing from Loom feedback

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -155,7 +155,6 @@
     @media only screen and
     (min-width: $screen-sm) {
       @include grid-column(4);
-      margin-left: 0;
     }
 
     @media only screen and
